# amora

./: .gitignore  .gitmodules  LICENSE  README.md  RULES.md  pyproject.toml
.plan/: 20260617-1617-nvidia-gpu-architecture-diagram.md  20260617-1644-cuda-perf-counter-ecosystem-survey.md  20260617-1659-amora-vendor-document-structure.md  20260618_nvidia-probe-semantic-measurement-gap-plan_comments.md  20260618_probing-suite-microarchitecture-plan_comments.md  gcom-cuda-implementation-tracking.md  gcom-cuda-probe-sim-vs-hw-comparison.md  gcom-cuda-stall-reason-histogram-per-probe.md  gcom-h100-probe-sim-vs-hw-comparison-comments.md  gcom-h100-probe-sim-vs-hw-comparison.md  nvidia-baseline-kernel-methodology.md  nvidia-baseline-probe-implementation-plan.md  nvidia-ncu-integration-plan.md  nvidia-p0-kernel-methodology.md  nvidia-p1-kernel-methodology.md  nvidia-p2-kernel-methodology.md  nvidia-p2-p3-sequencing-plan.md  nvidia-p3-kernel-methodology.md  nvidia-probe-semantic-measurement-gap-plan.md  nvidia-sass-validation-plan.md  probing-suite-microarchitecture-plan.md  workload-benchmark-suites.md
amora/: __init__.py  __main__.py  cli.py
amora/backends/: __init__.py
amora/benchmarking/: __init__.py  classification.py  detailed.py  materialize.py  registry.py  schema.py
amora/core/: __init__.py  artifacts.py  statistics.py
benchmark_generators/: __init__.py
benchmarks/: README.md
reports/: README.md
tests/: conftest.py  test_cli.py  test_results_schema.py  test_shared_memory_p0.py  test_smoke.py  test_statistics.py  test_topology_p0.py
(+182 files in other folders)
