[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "amora"
version = "0.1.0"
description = "Automated Microarchitecture Observation and Reverse-engineering for Accelerators"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "AMORA contributors" }
]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7"]

[project.scripts]
amora = "amora.cli:main"

[tool.setuptools.packages.find]
include = ["amora*"]

[tool.setuptools.package-data]
amora = ["probes/**/*.cu"]

[tool.pytest.ini_options]
testpaths = ["tests"]
